12. qmail-dkim.c: added DKIM_BAD_IDENTITY with letter Y
- 10/01/2024
13. qmail-dkim.c: use bouncehost/me control file if BOUNCEDOMAIN is not set -
    Roberto Puzzanghera
14. qmail-dkim.c: set DKIMSIGN to private key from dkimkeys control file
- 10/01/2024
15. filterit.c: reset sgoptpos for repeated calls to subgetopt
16. qmail-dkim.c: reset sgoptind, sgoptpos for repeated calls to subgetopt

* Mon Jan 01 2024 18:55:50 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.6-1.1%{?dist}
Release 3.0.6-1.1 Start 25/10/2023 End 01/01/2024
======= Release Highlights ================================================
- Multiple bug fixes and optimizations
- Refactored ETRN, ATRN code
- New program rd-remote with the same interface as qmail-remote for
  redirecting remote mails
- Added half/full detached mode in qmail-send, todo-proc, slowq-send
- Added negate option for archival feature in qmail-queue
- Added env variable EXCLUDE_DKIMSIGN to exclude headers from
  DKIM signing
- qmta-send major bug fix with flagchan
- Added remote mail redirector rd-remote
- Fixed maildir.c bug which breaks maildirserial. Skip non-regular files
- New program printass to print entries in users/cdb, users/assign file
===========================================================================
- 24/10/2023
01. use matchregex.h from /usr/include/qmail
02. svctool: fixed create_smtp argument check
03. svctool: added /etc/clamd.d to backup.conf
04. mail_acl.c, qregex.c, smtpd.c, uacl.c: use matchregex.h from
    /usr/include/qmail
05. qmail-queue.c: added feature to negate regexp match for archive feature
06. create_services.in: added --secureauth option for smtp port 587
08. create_services.in: added --setuser-priv option for slowq service
09. autoresponder.c, indimail-spamfilter.c: rewind descriptor 0 regardless of
    MAKE_SEEKABLE setting
- 26/10/2023
10. qmail-spamfilter.c: added HAMEXITCODE, UNSUREEXITCODE
11. qmail-spamfilter.c: Fixed working of globalspamredirect + REJECTSPAM