@@ -1,5 +1,5 @@
 #
-# $Id: svctool.in,v 2.721 2024-01-09 12:39:16+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.722 2024-01-17 09:22:43+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -27,7 +27,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.721 2024-01-09 12:39:16+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.722 2024-01-17 09:22:43+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -4776,9 +4776,9 @@ echo "$rundir/nssd.sock" > $conf_dir/NSSD_SOCKET
 dump_run_header
 echo "if [ ! -d $rundir ] ; then"
 echo "  mkdir -p $rundir"
-echo "  $chown root:indimail $rundir"
-echo "  chmod 775 $rundir"
 echo "fi"
+echo "$chown root:indimail $rundir"
+echo "chmod 775 $rundir"
 echo "exec 2>&1"
 echo ""
 echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables \\"
@@ -12300,7 +12300,7 @@ case $option in
 	fi
 	echo "Creating pwdLookup Daemon on socket $socket_path, thread_count $thread_count"
 	echo "  listen_timeout $timeout, Service $servicedir"
-	ehco "  mysql_user $mysql_user, mysql_pass $mysql_pass"
+	echo "  mysql_user $mysql_user, mysql_pass $mysql_pass"
 	if [ -n "$mysql_port" -a -n "$mysqlSocket" ] ; then
 		echo "  mysql_port $mysql_port, mysql_socket $mysqlSocket"
 	elif [ -n "$mysqlSocket" ] ; then
