@@ -30,6 +30,10 @@ Release @version@-@release@ Start 02/01/2024 End XX/XX/XXXX
 - 10/01/2024
 15. filterit.c: reset sgoptpos for repeated calls to subgetopt
 16. qmail-dkim.c: reset sgoptind, sgoptpos for repeated calls to subgetopt
+- 14/01/2024
+17. smtpd.c: prepend '@' to helohost when doing dnscheck
+- 17/01/2024
+18. svctool.in: fixed permissions of /run/indimail/pwdlookup
 
 * Mon Jan 01 2024 18:55:50 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.6-1.1%{?dist}
 Release 3.0.6-1.1 Start 25/10/2023 End 01/01/2024
